static/less/include/calendar.less
// colors
@event-game-color: #fff;
@event-game-bg: #6F5499;
@event-game-border: darken(@event-game-bg, 10%);

@event-release-color: @btn-primary-color;
@event-release-bg: @btn-primary-bg;
@event-release-border: @btn-primary-border;

.event-variant(@color; @background; @border) {
  color: @color;
  background-color: @background;
  border-color: @border;

  &:hover,
  &:focus,
  &:active,
  &.active,
  .open .dropdown-toggle& {
    color: @color;
    background-color: darken(@background, 8%);
        border-color: darken(@border, 12%);
  }
  &:active,
  &.active,
  .open .dropdown-toggle& {
    background-image: none;
  }
  &.disabled,
  &[disabled],
  fieldset[disabled] & {
    &,
    &:hover,
    &:focus,
    &:active,
    &.active {
      background-color: @background;
          border-color: @border;
    }
  }

  .badge {
    color: @background;
    background-color: @color;
  }
  &.is-finished{
      opacity: 0.5;
  }
}

@tournament-text: darken(@alert-warning-bg, 45%);

.fc-event{
  &.game,&.tournament,&.order{
    .fc-event-time{
      .pull-right;
    }
  }
  &.pre-release{
    .event-variant(@btn-warning-color, @btn-warning-bg, @btn-warning-border);
  }
  &.tournament{
    .event-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
  }
  &.order{
    .event-variant(@btn-danger-color, @btn-danger-bg, @btn-danger-border);
  }
  &.game{
    .event-variant(@event-game-color, @event-game-bg, @event-game-border);
  }
  &.release{
    .event-variant(@event-release-color, @event-release-bg, @event-release-border);
  }
}

